Convert boolean roles into an array.

--- a/src/app/units-index/units-index.component.html
+++ b/src/app/units-index/units-index.component.html
@@ -16,10 +16,8 @@
         <img src="../assets/elements/element_flame.png" alt="Flame Element" data-element="flame">
         <img src="../assets/elements/element_frost.png" alt="Frost Element" data-element="frost">
         <img src="../assets/elements/element_volt.png" alt="Volt Element" data-element="volt">
-        <img src="../assets/elements/element_physicalflame.png" alt="Physical Flame Fusion Element"
-          data-element="physical-flame">
-        <img src="../assets/elements/element_flamephysical.png" alt="Flame Physical Fusion Element"
-          data-element="flame-physical">
+        <img src="../assets/elements/element_physicalflame.png" alt="Physical Flame Fusion Element" data-element="physical-flame">
+        <img src="../assets/elements/element_flamephysical.png" alt="Flame Physical Fusion Element" data-element="flame-physical">
         <img src="../assets/elements/element_frostvolt.png" alt="Frost Volt Fusion Element" data-element="frost-volt">
         <img src="../assets/elements/element_voltfrost.png" alt="Volt Frost Fusion Element" data-element="volt-frost">
         <img src="../assets/elements/element_altered.png" alt="Altered Element" data-element="altered">
@@ -36,12 +34,13 @@
     <div class="role">
       <h5 class="title">Role</h5>
       <div class="wrapper">
-        <img src="../assets/effects/buff_mdps.png" alt="DPS Role" data-role="mdps">
-        <img src="../assets/effects/buff_buffer.png" alt="Buffer DPS Role" data-role="buffer">
-        <img src="../assets/effects/buff_healer.png" alt="Healer Role" data-role="healer">
-        <img src="../assets/effects/buff_supportbuffer.png" alt="Support Buffer Role" data-role="supportbuffer">
-        <img src="../assets/effects/buff_shatter.png" alt="Shatter Role" data-role="shatter">
-        <img src="../assets/effects/buff_taunt.png" alt="Taunt Role" data-role="taunt">
+        <!-- THE DATA-ROLES ARE NOT CASE-CONSISTENT WITH THE OTHER DATA-X ATTRIBUTES -->
+        <img src="../assets/effects/buff_mdps.png" alt="DPS Role" data-role="MDPS">
+        <img src="../assets/effects/buff_buffer.png" alt="Buffer DPS Role" data-role="Buffer">
+        <img src="../assets/effects/buff_healer.png" alt="Healer Role" data-role="Healer">
+        <img src="../assets/effects/buff_supportbuffer.png" alt="Support Buffer Role" data-role="SupportBuffer">
+        <img src="../assets/effects/buff_shatter.png" alt="Shatter Role" data-role="Shatter">
+        <img src="../assets/effects/buff_taunt.png" alt="Taunt Role" data-role="Taunt">
       </div>
     </div>
   </div>
