--- a/src/app/healing-calculator/healing-calculator.component.html
+++ b/src/app/healing-calculator/healing-calculator.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="insertions">
     <div class="units">
-      <div class="all-units">
+      <div class="all-units" [style.display]="showAllUnits ? 'flex' : 'none'">
         <div class="entry" *ngFor="let unit of units">
           <img class="avatar" src="assets/simulacra/{{unit.avatar}}.png" alt="Avatar">
           <div class="wrapper">
@@ -17,8 +17,7 @@
           </div>
         </div>
       </div>
-      <!-- does not exist yet -->
-      <!-- <div class="all-matrices">
+      <div class="all-matrices" [style.display]="showAllMatrices ? 'flex' : 'none'">
         <div class="entry" *ngFor="let matrix of matrices">
           <img class="avatar" src="assets/matrices/{{matrix.avatar}}.png" alt="Avatar">
           <div class="wrapper">
@@ -26,21 +25,21 @@
             <span class="description">Lorem ipsum</span>
           </div>
         </div>
-      </div> -->
+      </div>
       <div class="unit" data-unit="1">
         <div class="simulacra">
           <div class="subtitle">Weapons</div>
-          <div class="simulacra-select">
+          <div class="simulacra-select" (click)="toggleSelects(true, $event)">
             <img src="assets/other/simualcra_select.svg" alt="Select" class="image">
           </div>
         </div>
         <div class="matrices">
           <div class="subtitle">Matrices</div>
           <div class="wrapper">
-            <div class="matrix-select">
+            <div class="matrix-select" (click)="toggleSelects(false, $event)">
               <img src="assets/other/matrix_select.svg" alt="Select" class="image">
             </div>
-            <div class="matrix-select">
+            <div class="matrix-select" (click)="toggleSelects(false, $event)">
               <img src="assets/other/matrix_select.svg" alt="Select" class="image">
             </div>
           </div>
@@ -48,16 +47,16 @@
       </div>
       <div class="unit" data-unit="2">
         <div class="simulacra">
-          <div class="simulacra-select">
+          <div class="simulacra-select" (click)="toggleSelects(true, $event)">
             <img src="assets/other/simualcra_select.svg" alt="Select" class="image">
           </div>
         </div>
         <div class="matrices">
           <div class="wrapper">
-            <div class="matrix-select">
+            <div class="matrix-select" (click)="toggleSelects(false, $event)">
               <img src="assets/other/matrix_select.svg" alt="Select" class="image">
             </div>
-            <div class="matrix-select">
+            <div class="matrix-select" (click)="toggleSelects(false, $event)">
               <img src="assets/other/matrix_select.svg" alt="Select" class="image">
             </div>
           </div>
@@ -65,16 +64,16 @@
       </div>
       <div class="unit" data-unit="3">
         <div class="simulacra">
-          <div class="simulacra-select">
+          <div class="simulacra-select" (click)="toggleSelects(true, $event)">
             <img src="assets/other/simualcra_select.svg" alt="Select" class="image">
           </div>
         </div>
         <div class="matrices">
           <div class="wrapper">
-            <div class="matrix-select">
+            <div class="matrix-select" (click)="toggleSelects(false, $event)">
               <img src="assets/other/matrix_select.svg" alt="Select" class="image">
             </div>
-            <div class="matrix-select">
+            <div class="matrix-select" (click)="toggleSelects(false, $event)">
               <img src="assets/other/matrix_select.svg" alt="Select" class="image">
             </div>
           </div>
