--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="unit-name-element">
       <div class="unit-name">
-        <span>{{unit?.name}}</span>
+        <span>{{unit?.name[0]}}</span>
       </div>
       <div class="unit-weapon-name">
         <span>{{unit?.weapon}}</span>
