--- a/src/app/healing-calculator/healing-calculator.component.html
+++ b/src/app/healing-calculator/healing-calculator.component.html
@@ -12,7 +12,7 @@
         <div class="entry" *ngFor="let unit of units">
           <img class="avatar" src="assets/simulacra/{{unit.avatar}}.png" alt="Avatar">
           <div class="wrapper">
-            <span class="name">{{unit.name}}</span>
+            <span class="name">{{unit.name[0]}}</span>
             <span class="description">Lorem ipsum</span>
           </div>
         </div>
