--- a/src/app/unit-page/unit-page.component.scss
+++ b/src/app/unit-page/unit-page.component.scss
@@ -9,21 +9,6 @@
     gap: 20px;
     position: relative;
 
-    // border-bottom: 140px solid green;
-    // border-right: 140px solid transparent;
-    // border-top: 5px solid gold; | cant use this, might need a gold bar svg
-    // position: relative;
-
-    .background-splashart { // ew
-        position: absolute; // fixed
-        top: 0;
-        right: -40%;
-        z-index: -10;
-        opacity: 0.3;
-        height: 90vh;
-        //object-fit: none;
-    }
-
     .header-element {
         display: flex;
         // width: 1180px; we do not set static widths to content containers! we do the next 2 lines below
@@ -31,15 +16,12 @@
         width: 100%;
         padding: 10px 20px;
         background-image: var(--background-image);
-        // background-image: url("/assets/backgrounds/header_element.svg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: right; // ?
-        // height: 141px; i know this is because of the background being 1180x141, we might redo the background with CSS altogether
-        opacity: 0.9; // potential temp
-        min-height:141px ;
-
+        min-height: 141px; // svg height
         // position: absolute;
+
         .unit-avatar {
             display: flex;
             justify-content: left;
@@ -127,7 +109,6 @@
         width: 100%;
         padding: 20px 20px;
         background-color: $content;
-        opacity: 0.9; // potential temp
 
         .tabs {
             display: grid;
@@ -188,7 +169,7 @@
             }
 
             p {
-                font-weight: 200;
+                font-weight: 300;
                 margin: unset;
             }
 
@@ -226,27 +207,29 @@
                 flex-direction: column;
                 row-gap: 30px;
                 font-weight: 200;
+
                 ul {
                     list-style-position: outside;
                     padding-left: 0;
-                  }
-                
-                  li {
+                }
+
+                li {
                     list-style-type: none;
                     display: flex;
                     align-items: flex-start;
-                  }
-                
-                  span.number {
-                    width: 0.8rem; /* Adjust the width based on your needs */
+                }
+
+                span.number {
+                    width: 0.8rem;
+                    /* Adjust the width based on your needs */
                     text-align: center;
-                    
-                  }
-                
-                  span.text {
+
+                }
+
+                span.text {
                     margin-left: 0.5rem;
                     flex: 1;
-                  }
+                }
             }
 
             .attack-heading-wrap {
@@ -255,15 +238,15 @@
                 gap: 20px;
                 margin-bottom: 20px;
             }
-            .attack-name{
+
+            .attack-name {
                 font-size: 22px;
                 font-weight: 500;
                 padding-top: 4px;
-            
-              }
+            }
 
             .attack-container {
-                border-bottom: 1px solid $border;
+                border-bottom: 2px solid $border;
                 padding: 0 0 30px;
             }
 
@@ -277,9 +260,7 @@
                 display: flex;
                 gap: 10px;
             }
-            .attack-description{
-                margin-bottom: 20px;
-            }
+
             .attack-method {
                 padding: 2px 10px;
                 color: var(--element-color);
@@ -287,6 +268,7 @@
                 border-style: solid;
                 border-width: 1px;
             }
+
             .attack-method p {
                 font-weight: 400;
             }
