Minor changes, fix banner carousel missing a slide, appropriately interpret newline characters

--- a/src/app/unit-page/unit-page.component.html
+++ b/src/app/unit-page/unit-page.component.html
@@ -209,7 +209,7 @@
             <p>{{ item.name }}</p>
             <img src="assets/simulacra/abilities/{{item.icon}}" alt="Skill Icon">
             <div *ngFor="let desc of item.description">
-              <p>{{ desc.paragraph }}</p>
+              <p [style.white-space]="'pre-line'">{{ desc.paragraph }}</p>
             </div>
           </div>
         </div>
