Remove Teams, add Glossary, change header tags, lower header height, rename Mana to Arcana

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <section class="main">
   <div class="intro">
     <div class="titles">
-      <h3 class="title">Mana Sanctuary</h3>
+      <h3 class="title">Arcana Sanctuary</h3>
       <h4 class="subtitle">Project Team</h4>
     </div>
     <p class="description">Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Lorem ipsum dolor sitamet, consecte tur adipiscing elit. Lorem ipsum dolor sit amet, consecte tur adipiscing elit.</p>
