--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div>
     <img src="../assets/other/mana.svg" alt="Mana Icon">
-    <span>Mana Sanctuary</span>
+    <span>Arcana Sanctuary</span>
   </div>
   <div class="footer-nav-container">
     <ul class="nav">
@@ -13,14 +13,13 @@
         <a routerLink="/healing">Healing</a>
       </li>
       <li>
-        <a routerLink="/unit-page">Teams</a>
-        <!-- Teams routing to /unitpage is temporary -->
-      </li>
-      <li>
         <a routerLink="/guides">Guides</a>
       </li>
       <li>
         <a routerLink="/units-index">Index</a>
+      </li>
+      <li>
+        <a routerLink="/glossary">Glossary</a>
       </li>
       <li>
         <a routerLink="/about-us">About Us</a>
@@ -28,6 +27,6 @@
     </ul>
   </div>
   <div class="copyright">
-    <span>© 2023 Mana Sanctuary.</span>
+    <span>© 2024 Arcana Sanctuary.</span>
   </div>
 </footer>
