--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
   </splide>
   <div class="content-container">
     <div class="inner">
-      <h1 class="title">Mana Sanctuary</h1>
+      <h1 class="title">Arcana Sanctuary</h1>
       <p class="introduction">A comprehensive Tower of Fantasy <br>athenaeum of guides and knowledge</p>
       <a routerLink="/about-us" class="white-black">About Us</a> 
     </div>
