--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -19,13 +19,13 @@
         <a routerLink="/healing">Healing</a>
       </li>
       <li>
-        <a routerLink="/unit-page">Teams</a>
-      </li>
-      <li>
         <a routerLink="/guides">Guides</a>
       </li>
       <li>
         <a routerLink="/units-index">Index</a>
+      </li>
+      <li>
+        <a routerLink="/glossary">Glossary</a>
       </li>
     </ul>
   </div>
