--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,11 +4,9 @@
     background-image: linear-gradient(rgba(38, 38, 38, 0.6), rgba(38, 38, 38, 0.6)), url("/assets/backgrounds/mana_background.png"); // #262626 I forget way too often that you can do this
     background-size: cover;
     background-position-y: 30%; // Problem: eyes are not centerpiece as viewport changes width. % value is better than a static px value, but does not solve the problem
-    height: 128px;
-
     display: flex;
     align-items: center;
-    padding: 0px 72px;
+    padding: 32px 64px;
 
     .main-menu {
         display: flex;
@@ -49,7 +47,7 @@
                     .title-tags {
                         color: inherit;
 
-                        .beta-tag-dd {
+                        .beta-tag-dd, .wip-tag-dd {
                             color: #FFFFFF;
                         }
                     }
