--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,7 +68,7 @@ main {
         margin: 0 0 80px 0;
     }
 
-    app-units-index, app-unit-page, app-guides, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
+    app-units-index, app-unit-page, app-guides, app-glossary, app-healing, app-healing-guide, app-healing-teams, app-healing-calculator, app-about-us, app-page-not-found { // with how Angular loads pages, just do this for every main component
         width: 100%;
         display: flex;
         flex-direction: column;
@@ -136,26 +136,33 @@ main {
     line-height: 1.2;
 }
 
-.beta {
+.beta, .wip {
     position: relative;
 
-    .beta-tag, .beta-tag-dd {
+    .beta-tag, .beta-tag-dd, .wip-tag, .wip-tag-dd {
         position: absolute;
-        top: -16px;
-        right: -30px;
+        top: -14px;
+        right: -28px;
         font-size: 10px;
         font-weight: 600;
         padding: 2px 10px;
         border-radius: 15px;
-        // background: linear-gradient(90deg, rgba(18,10,161,1) 0%, rgba(9,137,246,1) 100%); // darker
-        background: linear-gradient(90deg, rgb(88, 91, 185) 0%, rgba(9,137,246,1) 100%); // lighter. crime against humanity honestly
         text-transform: uppercase;
     }
 
-    .beta-tag-dd {
+    .beta-tag, .beta-tag-dd {
+        // background: linear-gradient(90deg, rgba(18,10,161,1) 0%, rgba(9,137,246,1) 100%); // darker
+        background: linear-gradient(90deg, rgb(88, 91, 185) 0%, rgba(9,137,246,1) 100%); // lighter. crime against humanity honestly
+    }
+
+    .beta-tag-dd, .wip-tag-dd {
         position: unset;
         top: unset;
         right: unset;
+    }
+
+    .wip-tag, .wip-tag-dd {
+        background: linear-gradient(90deg, rgb(28, 121, 20) 0%, rgb(12, 196, 12) 100%);
     }
 }
 
