Add relics and matrices index, change home main content section width logic, change router order, add glossary dummy block to home

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -48,13 +48,13 @@
           </div>
           <p class="description">the people of fantasy tower</p>
         </a>
-        <a routerLink="">
+        <a routerLink="matrices-index">
           <div class="title-tags">
             <span class="title">Matrices</span>
           </div>
           <p class="description">rectangular casino chips</p>
         </a>
-        <a routerLink="">
+        <a routerLink="relics-index">
           <div class="title-tags">
             <span class="title">Relics</span>
           </div>
