--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -196,6 +196,25 @@
 </section>
 <section class="main">
   <div class="inner">
+    <div class="half text">
+      <div class="wrapper">
+        <div class="quote-block">
+          <h3 class="title">Glossary</h3>
+          <p class="quote">“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ut tortor eget felis
+            maximus ullamcorper.“</p>
+          <span class="name">- Someone</span>
+        </div>
+      </div>
+    </div>
+    <div class="half visual">
+      <div class="wrapper" id="glossary">
+
+      </div>
+    </div>
+  </div>
+</section>
+<section class="main">
+  <div class="inner">
     <div class="discord">
       <span class="subtitle">
         Have questions, found a bug or want to discuss?
