--- a/src/app/matrices-index/matrices-index.component.html
+++ b/src/app/matrices-index/matrices-index.component.html
@@ -1,1 +1,9 @@
-<p>matrices-index works!</p>
+<section class="main">
+  <h2 class="title-big-center">Matrices</h2>
+  <div class="matrices-category-filter">
+
+  </div>
+  <div class="matrices-index">
+    <!-- <app-matrix-card *ngFor="let matrix of matrices" [matrix]="matrix"></app-matrix-card> -->
+  </div>
+</section>
