--- a/src/app/relics-index/relics-index.component.html
+++ b/src/app/relics-index/relics-index.component.html
@@ -1,1 +1,9 @@
-<p>relics-index works!</p>
+<section class="main">
+  <h2 class="title-big-center">Relics</h2>
+  <div class="relics-category-filter">
+
+  </div>
+  <div class="relics-index">
+    <!-- <app-relic-card *ngFor="let relic of relics" [relic]="relic"></app-relic-card> -->
+  </div>
+</section>
