--- a/src/app/units-index/units-index.component.html
+++ b/src/app/units-index/units-index.component.html
@@ -1,6 +1,6 @@
 <section class="main">
-  <h2 class="title-big-center">Simulacra and Matrices</h2>
-  <div class="category-filter">
+  <h2 class="title-big-center">Simulacra</h2>
+  <div class="units-category-filter">
     <div class="rarity">
       <h5 class="title">Rarity</h5>
       <div class="wrapper">
@@ -44,7 +44,7 @@
       </div>
     </div>
   </div>
-  <div class="all-unit-index">
+  <div class="units-index">
     <app-unit-card *ngFor="let unit of units" [unit]="unit"></app-unit-card>
   </div>
 </section>
