--- a/src/app/units-index/units-index.component.scss
+++ b/src/app/units-index/units-index.component.scss
@@ -1,6 +1,6 @@
 @import '../../styles.scss';
 
-.category-filter {
+.units-category-filter {
     display: flex;
     max-width: 1200px;
     width: 100%;
@@ -88,7 +88,7 @@
 
 }
 
-.all-unit-index {
+.units-index {
     margin: 40px 0 0 0;
     width: 100%;
     display: grid;
