--- a/src/app/guides/guides.component.scss
+++ b/src/app/guides/guides.component.scss
@@ -21,9 +21,10 @@
             background-color: $content;
             border-radius: 10px;
             height: 100%;
-            transition: 0.5s ease;
+            transition: 0.25s ease;
             cursor: pointer;
-    
+
+            // consider using an animation that *isnt* scale as the image and text look like shit during the transition
             &:hover {
                 transform: translate3D(0,-1px,0) scale(1.02);
             }
